encrypting files access from docker fix